--- a/css/index.css
+++ b/css/index.css
@@ -1,30 +1,176 @@
-/* body {
-    background-image: url("../images/body-background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    box-sizing: border-box; 
-    overflow: hidden;
-} */
+.dv1 {
+    height: 330px;
+    background-color: black;
+}
 
-*/ .txt-deco {
-    text-decoration: none;
+#navbarNav1 {
+    height: 44px;
+    line-height: 44px;
+    padding: 0;
+}
+
+.padding0 {
+    padding: 0;
 
 }
 
-.a-line:hover {
+.fs1 {
+    font-size: 12px;
+    /* color: white; ???????????????????????????????????????????????*/
+}
+
+li {
+    padding-left: 15px;
+}
+
+.box1-button {
+    width: 460px;
+    height: 80px;
+    /* background-color: bisque; */
+}
+
+#button1 {
+    width: 182px;
+    height: 48px;
+    font-size: 17px;
+    background-color: black;
+    transition: all 250ms linear 100ms;
+    color: white;
+    font-weight: 500;
+
+}
+
+#button1:hover {
+    background-color: white;
+    color: black;
+}
+
+.fonts1 {
+    font-size: 56px;
+    font-weight: 700;
+    background: -webkit-linear-gradient(0deg, #6a5578 0%, #99bfd8 50%, #41587a 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.dv2 {
+    height: 150px;
+    background-color: black;
+}
+
+.bg-box2 {
+    height: 350px;
+    /* width: 100%; */
+    overflow: hidden;
+    background-image: url("../images/hero_homepod_announce__gmwsq6zqqcya_medium.jpg");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 1068px 617px;
+}
+
+.box1-part3 {
+    color: rgb(110, 110, 115);
+    font-size: 21px;
+}
+
+.bluelink {
+    text-decoration: none;
+    color: #2997ff;
+    font-size: 19px;
+    padding-left: 30px;
+    transition: all 200ms linear 50ms;
+}
+
+.bluelink:hover {
     text-decoration: underline;
 }
 
-/* ?????????????????????????????????????????????????????????? */
-/* .img12 {
-    background-image: url("../images/hero_iphone14pro__e5xbgo5ffhg2_large_2x.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-} */
-
-.img-si {
-    transform: scale(2.2);
-
+.icon-placement {
+    position: relative;
+    top: 6px;
 }
+
+.custom-devider {
+    height: 12px;
+}
+
+.box2-h4 {
+    color: white;
+}
+
+.bg-box3 {
+    height: 350px;
+    /* width: 100%; */
+    overflow: hidden;
+    background-image: url("../images/hero_macmini_preorder__ixuialh97nyq_medium.jpg");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 1068px 617px;
+}
+
+.bg-box4 {
+    height: 350px;
+    /* width: 100%; */
+    overflow: hidden;
+    background-image: url("../images/hero_mbp_preorder__caf0s6im2nqq_medium.jpg");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 1068px 617px;
+}
+
+/* -------------------------------------------------------double boxes */
+
+.bg-box5 {
+    height: 580px;
+    overflow: hidden;
+    border-width: 0px 6px 0px 12px;
+    border-style: solid;
+    border-color: white;
+    box-sizing: border-box;
+    background-image: url("../images/promo_bhm__d8b9z5rlwjgy_large_2x.jpg");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 1262px 580px;
+}
+
+.bg-box6 {
+    height: 580px;
+    overflow: hidden;
+    border-width: 0px 12px 0px 6px;
+    border-style: solid;
+    border-color: white;
+    box-sizing: border-box;
+    background-image: url("../images/promo_apple_watch_series_8__ch7rexplmihe_large_2x.jpg");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 1262px 580px;
+}
+
+.dv2d {
+    /* height: 180px; */
+    margin-top: 50px;
+}
+
+.img-logo-s {
+    width: 32%;
+    margin-bottom: 10px;
+}
+
+.heading-property {
+    font-size: 40px;
+    text-align: center;
+    font-weight: 600;
+}
+
+/* ************************************************************************************************ */
+@media all and (max-width: 575px) {}
+
+@media all and (min-width:576px) and (max-width: 767px) {}
+
+@media all and (min-width:678px) and (max-width: 991px) {}
+
+@media all and (min-width:992px) and (max-width: 1199px) {}
+
+@media all and (min-width:1200px) and (max-width: 1399px) {}
+
+@media all and (min-width:1400px) {}
