--- a/css/index.css
+++ b/css/index.css
@@ -274,7 +274,7 @@ li {
 
 .listcustomB2 {
     list-style-type: none;
-    font-size: calc(8px + 0.4vw);
+    font-size: calc(8px + 0.5vw);
 }
 
 .listcustomB2 li {
@@ -286,6 +286,13 @@ li {
     color: rgb(47, 47, 47);
 }
 
+.liHover a:hover {
+    text-decoration: underline;
+}
+.listcustomB3 {
+
+    font-size: calc(8px + 0.5vw);
+}
 /* ************************************************************************************************ */
 @media all and (max-width: 575px) {
     .fonts1 {
