--- a/css/index.css
+++ b/css/index.css
@@ -289,10 +289,24 @@ li {
 .liHover a:hover {
     text-decoration: underline;
 }
+
 .listcustomB3 {
 
     font-size: calc(8px + 0.5vw);
 }
+
+.customLocation {
+    bottom: 5vh;
+    left: 5vw;
+    /* z-index: 1; */
+}
+
+.customLocation2 {
+    bottom: 3.5vh;
+    left: 20vw;
+    font-size: calc(8px + 0.3vw);
+}
+
 /* ************************************************************************************************ */
 @media all and (max-width: 575px) {
     .fonts1 {
