collapse footer is done!

--- a/css/index.css
+++ b/css/index.css
@@ -307,6 +307,10 @@ li {
     font-size: calc(8px + 0.3vw);
 }
 
+.customFs {
+    font-size: 12px;
+}
+
 /* ************************************************************************************************ */
 @media all and (max-width: 575px) {
     .fonts1 {
